2004-11-01  Tom Tromey  <tromey@redhat.com>

	* link.cc (wait_for_state): Call verify_class.

	* verify.cc (state::check_no_uninitialized_objects): Removed.
	(push_jump): Updated.
	(push_exception_jump): Likewise.
	(handle_ret_insn): Likewise.
	(handle_jsr_insn): Likewise.

2004-10-28  Andrew Haley  <aph@redhat.com>

	* gnu/gcj/runtime/PersistentByteMap.java: New file.
	* jv_dbtool.java: New file.
	* Makefile.am (bin_PROGRAMS): Add jv-dbtool
	(jv_dbtool_SOURCES, jv_dbtool_LDFLAGS, jv_dbtool_LINK)
	(jv_dbtool_LDADD, jv_dbtool_DEPENDENCIES): New.
	* Makefile.in: Regenerate,
	* java/lang/VMCompiler.java: Import NoSuchAlgorithmException,
	Enumeration, StringTokenizer, Vector, PersistentByteMap.
	(precompiledMapFiles): New variable.
	(VMCompiler static intializer): Read "gnu.gcj.precompiled.db" to
	initialize precompiledMapFiles.
	(compileClass): Look at the database of precompiled class files
	before firing up gcj.

	* gnu/gcj/runtime/VMClassLoader.java (findClass): Fix comment.

2004-10-27  Andrew Haley  <aph@redhat.com>

	* java/lang/VMCompiler.java (compileClass): try looking for
	precompiledMapFiles.
	* gnu/gcj/runtime/PersistentByteMap.java: New file.

2004-10-27  Tom Tromey  <tromey@redhat.com>

	* link.cc (ensure_class_linked): Only resolve classes for
	compiled classes.
	(add_miranda_methods): Ensure interface supers are installed.
	(resolve_pool_entry): Better error message.

2004-10-25  Tom Tromey  <tromey@redhat.com>

	* boehm.cc (_Jv_MarkObj): Test aux_info before dereferencing it.

	* java/util/ResourceBundle.java (tryBundle): Use
	Class.isAssignableFrom rather than catching ClassCastException.

	* java/util/zip/InflaterInputStream.java (fill): Don't throw an
	exception if we hit EOF of `in'.
	(read): Handle case where inflating returns -1.

	* gnu/java/text/WordBreakIterator.java (WordBreakIterator): Don't
	initialize `iter'.
	* gnu/java/text/SentenceBreakIterator.java
	(SentenceBreakIterator): Don't initialize `iter'.