@@ -1,3 +1,7 @@
+2004-11-04  Tom Tromey  <tromey@redhat.com>
+
+	* interpret.cc (do_verify): Don't verify abstract methods.
+
 2004-11-01  Tom Tromey  <tromey@redhat.com>
 
 	* link.cc (wait_for_state): Call verify_class.
